Adding the header tab with background image

--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
 <head>
     <!-- TODO: Include Font Awesome file here -->
     <!-- TODO: Include Google Fonts file here -->
+    <link href="https://fonts.googleapis.com/css?family=Montez|Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link rel = "stylesheet"  type = "text/css"  href = "./styles/common.css" />
 </head>
 
 <body>
     <!-- TODO: Include all your code for the header and home page here -->
+
+    <header>
+        <div class="header-bar">
+          <div class="side-logo">
+              <div style=" font-family: 'Montez', cursive; font-size: 25px;font-weight: bold;color:blue">ScriBBler</div>
+               <div style="font-family: 'Ubuntu Mono', monospace; font-size: small;">Explore, Imagine, Create</div>
+            </div>
+           <div class="home-buttons">
+            <button type="button" name="sign-up" >Sign Up</button>
+             <button type="button" name="sign-in"  >Sign In</button>
+            <div>
+         </div>       
+    </header>
+
 </body>
 
 </html>
