Adding placard box and styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    
 </head>
 
-<body>
+<body class="common-body">
     <!-- TODO: Include all your code for the header and home page here -->
 
     <header class="header-class">
