--- a/html/post.html
+++ b/html/post.html
@@ -23,7 +23,7 @@
             </div>
            <div class="home-buttons">
             <button type="button" class="button-class" data-toggle="modal" 
-            data-target="#signup-form">Sign Up</button>
+            data-target="#signup-form" >Sign Up</button>
             <div class="modal" tabindex="-1" role="dialog" id="signup-form">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
@@ -58,14 +58,14 @@
                         </div>
                       </div>
                       <div class="modal-footer border-top-0 d-flex justify-content-center">
-                        <button type="submit" class="btn btn-success" style="width: 500px;">Sign Up</button>
+                        <button type="submit" class="btn btn-success" style="width: 500px;" onclick="location.href = '../index.html';">Sign Up</button>
                       </div>
                     </form>
                   </div>
                 </div>
               </div>
               <button type="button" class="button-class" data-toggle="modal" 
-              data-target="#signin-form">Sign In</button>
+              data-target="#signin-form" >Sign In</button>
               <div class="modal" tabindex="-1" role="dialog" id="signin-form">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -89,11 +89,11 @@
                             </div>
                         </div>
                         <div class="modal-footer border-top-0 d-flex justify-content-center">
-                          <button type="submit" class="btn btn-success" style="width: 500px;">Sign In</button>
+                          <button type="submit" class="btn btn-success" style="width: 500px;" onclick="location.href = '../index.html';">Sign In</button>
                         </div>
                         <div class="modal-footer border-top-0 d-flex justify-content-center">
                             Not a member ?  <a data-target="#signup-form"  data-dismiss="modal"  data-toggle="modal"  
-                            href="#signup-form"> Sign Up</a>
+                            href="#signup-form" onclick="location.href = '../index.html';"> Sign Up</a>
                         </div>
                       </form>
                     </div>
