--- a/html/postslist.html
+++ b/html/postslist.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montez|Roboto|Ubuntu+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" type="text/css" media="screen" />
-    <link rel = "stylesheet"  type = "text/css"  href = "../styles/common.css" />
+    <link rel = "stylesheet"  type = "text/css"  href = "../styles/index.css" />
     <link rel = "stylesheet"  type = "text/css"  href = "../styles/postslist.css" /> 
 
     
