--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- TODO: Include Google Fonts file here -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montez|Roboto|Ubuntu+Mono&display=swap" rel="stylesheet">
-    <link rel = "stylesheet"  type = "text/css"  href = "./styles/common.css" />
+    <link rel = "stylesheet"  type = "text/css"  href = "./styles/index.css" />
    
 </head>
 
